--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "type": "git",
     "url": "git+https://github.com/Corramel/super-duper-telegram.git"
   },
-  "keywords": {
-    "discord"
-  },
-  "author": "John Smith",
+  "keywords": [
+    "discord",
+    "memes"
+  ],
+  "author": "Corramel",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Corramel/super-duper-telegram/issues"
