--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "bugs": {
     "url": "https://github.com/Corramel/super-duper-telegram/issues"
   },
-  "homepage": "https://github.com/Corramel/super-duper-telegram#readme",
+  "homepage": "https://github.com/Corramel/super-duper-telegram#super-duper-telegram",
   "dependencies": {
     "discord.js": "hydrabolt/discord.js#master",
     "request": "^2.67.0",
